<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    tools:context=".AkunSayaActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:background="@color/blue"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:orientation="vertical">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/foto_driver"
                    android:layout_centerInParent="true"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/fotobnr"
                    android:contentDescription="@string/todo_ppdriver" />

                <TextView
                    android:id="@+id/tv_nama_driver"
                    android:gravity="center"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reynan_syahputra"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    android:textSize="21sp"/>
            </RelativeLayout>


            <androidx.cardview.widget.CardView
                android:layout_width="300dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/layanan"
                            android:textSize="20sp"/>

                        <TextView
                            android:id="@+id/tv_jenislay"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pilihL"
                            android:textStyle="bold"
                            android:textSize="17sp"
                            android:paddingTop="10dp"
                            android:textColor="@color/blue"/>
                    </LinearLayout>

                    <LinearLayout
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:background="#ffffff">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/kendaraan"
                            android:textSize="20sp"/>

                        <TextView
                            android:id="@+id/tv_kendaraan"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/jnsK"
                            android:textStyle="bold"
                            android:textSize="17sp"
                            android:paddingTop="10dp"
                            android:textColor="@color/blue"/>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_marginTop="20dp">

                <LinearLayout
                    android:orientation="horizontal"
                    android:paddingStart="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="RtlSymmetry,UseCompoundDrawables">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/email"
                        android:contentDescription="@string/todo_gmail" />

                    <TextView
                        android:id="@+id/tv_email"
                        android:textStyle="bold"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="20dp"
                        android:text="@string/gmail"
                        android:textSize="18sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    android:paddingStart="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="RtlSymmetry,UseCompoundDrawables">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/nohp"
                        android:contentDescription="@string/todo_nohpD" />

                    <TextView
                        android:id="@+id/tv_nomorhp"
                        android:textStyle="bold"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="20dp"
                        android:text="@string/no_hp"
                        android:textSize="18sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    android:paddingStart="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="RtlSymmetry,UseCompoundDrawables">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/alamat"
                        android:contentDescription="@string/todo_alamat" />

                    <TextView
                        android:id="@+id/tv_alamat_driver"
                        android:textStyle="bold"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="20dp"
                        android:text="@string/alamat"
                        android:textSize="18sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    android:paddingStart="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="RtlSymmetry,UseCompoundDrawables">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/kb"
                        android:contentDescription="@string/todo_kb" />

                    <TextView
                        android:id="@+id/tv_plat"
                        android:textStyle="bold"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="20dp"
                        android:text="@string/kb"
                        android:textSize="18sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    android:paddingStart="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="RtlSymmetry,UseCompoundDrawables">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/warna"
                        android:contentDescription="@string/todo_warna" />

                    <TextView
                        android:id="@+id/tv_warnakend"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:paddingStart="20dp"
                        android:text="@string/warna"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
