<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NoVirtual1Activity"
    android:orientation="vertical"
    android:background="#FFFFFF">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_tfbank"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tf_bank1"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:background="@color/blue"
                    android:textColor="#FFFFFF"
                    android:layout_marginTop="30dp"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/tv_nmrvir1"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/novir_bank1"
                    android:textSize="20sp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:textColor="#000000"
                    android:layout_marginTop="180dp"
                    android:gravity="center"
                    android:layout_centerInParent="false"/>

                <TextView
                    android:id="@+id/tv_nmrbank1"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/nmrvir1"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:textColor="#000000"
                    android:layout_marginTop="230dp"
                    android:gravity="center"
                    android:layout_centerInParent="false"/>

                <Button
                    android:id="@+id/btn_salinkode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:paddingRight="15dp"
                    android:paddingLeft="15dp"
                    android:text="@string/copy1"
                    android:layout_marginTop="600dp"
                    android:background="@drawable/rounded_corner"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"
                    android:layout_centerInParent="true"
                    android:onClick="buttonCopy1"
                    tools:ignore="OnClick"/>

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>